docs/vocabulary/_sources/type/TimePoint/v1/index.rst.txt
:orphan:

TimePoint (v1)
==============

.. warning::
   This is not the latest version. The latest version is :doc:`v5 <../v5/index>`.

- **Previous Version:** none *(this is the oldest version)*
- **URI:** `http://clams.ai/vocabulary/type/TimePoint/v1 <http://clams.ai/vocabulary/type/TimePoint/v1>`_
- **Shortname:** ``TimePoint``
- **Inherits from:** :doc:`Region (v1) <../../Region/v1/index>`
- **Included in:** :doc:`1.0.0 <../../../1.0.0/index>`, :doc:`1.0.1 <../../../1.0.1/index>`
- **Also Known As:** This type is also accessible at the following legacy URLs for backward compatibility:

  - `http://mmif.clams.ai/vocabulary/TimePoint/v1 <http://mmif.clams.ai/vocabulary/TimePoint/v1>`_
  - `http://mmif.clams.ai/0.4.0/vocabulary/TimePoint/ <http://mmif.clams.ai/0.4.0/vocabulary/TimePoint/>`_
  - `http://mmif.clams.ai/0.4.1/vocabulary/TimePoint/ <http://mmif.clams.ai/0.4.1/vocabulary/TimePoint/>`_
  - `http://mmif.clams.ai/0.4.2/vocabulary/TimePoint/ <http://mmif.clams.ai/0.4.2/vocabulary/TimePoint/>`_

Description
-----------

A time point in an audio or video stream.


Properties
----------

Synopsis
^^^^^^^^

*Properties marked with* **\*** *are required.*

.. list-table::
   :header-rows: 1
   :widths: 40 40 20
   :align: left

   * - Property
     - Type
     - Origin
   * - :ref:`TimePoint-v1-timePoint` **\***
     - integer
     - *native*
   * - :ref:`TimePoint-v1-timeUnit`
     - string
     - :doc:`Region (v1) <../../Region/v1/index>`
   * - :ref:`TimePoint-v1-document`
     - string
     - :doc:`Annotation (v2) <../../Annotation/v2/index>`
   * - :ref:`TimePoint-v1-id` **\***
     - string
     - :doc:`Thing (v1) <../../Thing/v1/index>`


Native
^^^^^^


.. _TimePoint-v1-timePoint:

``timePoint``
"""""""""""""

- type: *integer*
- required: yes

The starting offset in the stream.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Region (v1) <../../Region/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _TimePoint-v1-timeUnit:

``timeUnit``
""""""""""""

- type: *string*
- required: no

Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Annotation (v2) <../../Annotation/v2/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _TimePoint-v1-document:

``document``
""""""""""""

- type: *string*
- required: no

The identifier of the document that the annotation is over.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


Inherited from :doc:`Thing (v1) <../../Thing/v1/index>`
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^


.. _TimePoint-v1-id:

``id``
""""""

- type: *string*
- required: yes

A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.

.. raw:: html

   <hr style="border: none; border-top: 1px solid var(--color-background-border);">


JSON Schema
-----------

.. code-block:: json

   {
     "additionalProperties": true,
     "properties": {
       "id": {
         "description": "A unique identifier for the annotation or document. Uniqueness is relative to the view the annotation is in or the list of documents at the top level of a MMIF file.",
         "type": "string"
       },
       "document": {
         "type": "string",
         "description": "The identifier of the document that the annotation is over."
       },
       "timeUnit": {
         "type": "string",
         "description": "Specifies which unit of time the measurement is based. Can be *seconds* or *milliseconds*, or in case of annotations on a VideoDocument, *frames*."
       },
       "timePoint": {
         "description": "The starting offset in the stream.",
         "type": "integer"
       }
     },
     "required": [
       "id",
       "timePoint"
     ],
     "type": "object"
   }